Execercise1-fetching Git Users

--- a/users.html
+++ b/users.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <p id="data"></p>
-    <script src="gitUsers2.js"></script>
+    <script src="gitUsers.js"></script>
 </body>
 </html>
