api fetch for posts,comments and photos

--- a/users.html
+++ b/users.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <p id="data"></p>
-    <script src="api_fetch.js"></script>
+    <script src="storage.js"></script>
 </body>
 </html>
